https-en-k8s/k8s/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mi-app-ingress
  namespace: default   # cambiá si tus apps están en otro namespace
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - 35.224.54.144.sslip.io   # reemplazar con tu IP.sslip.io (ver: terraform output ingress_domain)
      secretName: mi-app-tls
  rules:
    - host: 35.224.54.144.sslip.io   # mismo valor que en tls.hosts
      http:
        paths:
          # Paths más específicos van primero
          - path: /api/products
            pathType: Prefix
            backend:
              service:
                name: products-api-service
                port:
                  number: 80
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: users-api-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
